--- a/popup.html
+++ b/popup.html
@@ -29,9 +29,10 @@
      -->
 
     <script src="popup.js"></script>
+    <script src = "bg.js"></script>
   </head>
   <body>
-    <div>hhhhhhhhhhh</div>
+    <div id = "aa">hhhhhhhhhhh</div>
 
   </body>
 </html>
