--- a/popup.html
+++ b/popup.html
@@ -29,10 +29,20 @@
      -->
 
     <script src="popup.js"></script>
-    <script src = "bg.js"></script>
+    <script src = "jquery.js">
+    </script>
   </head>
   <body>
     <div id = "aa">hhhhhhhhhhh</div>
+    <div class="ui-content">
+      <div id="ongoing">
+          <div class='title'><h3>Live Contests</h3></div>
+      </div>
+      <div id="upcoming">
+          <div class='title'><h3>Upcoming Contests</h3></div>
+      </div>
+    </div>
+    <div id="scroll-info">new contests added, scroll to view</div>
 
   </body>
 </html>
