changes:popup.js

--- a/popup.html
+++ b/popup.html
@@ -28,20 +28,24 @@
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
      -->
 
-    <script src="popup.js"></script>
-    <script src = "jquery.js">
+    <script type="text/javascript" src="popup.js"></script>
+    <script type="text/javascript" src = "jquery.js">
     </script>
+      <script type="text/javascript" src="jquery-2.js"></script>
+      <script type="text/javascript" src="jquery-ui.js"></script>
+       <script type="text/javascript" src="jquery-ui-1.12.1/jquery-ui.min.js"></script>
+      <script type="text/javascript" src="jquery-1.2.6.js"></script>
+
   </head>
   <body>
     <div id = "aa">hhhhhhhhhhh</div>
-    <div class="ui-content">
       <div id="ongoing">
           <div class='title'><h3>Live Contests</h3></div>
       </div>
       <div id="upcoming">
           <div class='title'><h3>Upcoming Contests</h3></div>
       </div>
-    </div>
+    
     <div id="scroll-info">new contests added, scroll to view</div>
 
   </body>
